# brighter-properties-ms

./: .gitignore  CLAUDE.md  README.md  entrypoint.sh  main.py  openapi.json  pyproject.toml
.github/workflows/: ci.yml
app/: crud.py  deps.py  limiter.py  logging.py  models.py  regions.py  schemas.py  scopes.py  settings.py  storage.py
app/routers/: images.py  pricing.py  property.py  regions.py  translations.py  unavail.py
app/services/: availability.py  price_resolver.py
migrations/aerich_history/: 16_20260428235933_add_pricing_tables.py  17_20260429111335_gap_filling.py  19_20260429112521_update.py  20_20260502150300_add_settlement_fields.py  4_20260402102843_rooms_replace_room_fields.py  5_20260409_unavailability_datetime_to_date.py
migrations/models/: 0001_initial.py  0002_auto_20260504_0024.py  0003_auto_20260504_0137.py  0004_auto_20260505_0057.py  1_20260401012351_None.py  20_20260502_add_region_settlement.py  3_20260401014338_add_bed_info_and_room_details.py  4_20260402102843_rooms_replace_room_fields.py
processing/: ek_atte.json  ek_obl.json  ek_sobr.json  ekatte_coords.json  final_merged_settlements.json  geocode_settlements.py  proccess_settlements.py
scripts/: seed.py
tests/: conftest.py  factories.py  test_availability.py  test_gap_filler.py  test_images.py  test_price_resolver.py  test_pricing_router.py  test_properties.py  test_regions_router.py  test_schemas.py  test_scopes.py  test_telemetry.py  test_unavailabilities.py
